--- a/20210928/WA50/WA50/Views/Home/Index.cshtml
+++ b/20210928/WA50/WA50/Views/Home/Index.cshtml
@@ -1,5 +1,20 @@
-﻿@{
+﻿@model IEnumerable<Northwind.Store.Model.Product>
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <h1>Products</h1>
+
+<form method="post">
+    <input name="filter" type="search" class="form-control"/>
+</form>
+
+@if (Model != null && Model.Any())
+{
+    <table class="table">
+        @foreach (var p in Model)
+        {
+            <tr><td>@p.ProductName</td></tr>   
+        }
+    </table>
+}
