--- a/20211005/WA50/WA50/Views/Home/Index.cshtml
+++ b/20211005/WA50/WA50/Views/Home/Index.cshtml
@@ -1,20 +1,35 @@
-﻿@model IEnumerable<Northwind.Store.Model.Product>
+﻿@using Northwind.Store.Model
+@model IEnumerable<Northwind.Store.Model.Product>
 @{
     ViewData["Title"] = "Home Page";
 }
 
 <h1>Products</h1>
 
-<form method="post">
-    <input name="filter" type="search" class="form-control"/>
+<a asp-action="Index" asp-route-filter="queso">Queso</a>
+
+<form asp-action="Index">
+    <input name="filter" type="search" class="form-control" />
 </form>
 
-@if (Model != null && Model.Any())
-{
-    <table class="table">
-        @foreach (var p in Model)
-        {
-            <tr><td>@p.ProductName</td></tr>   
-        }
-    </table>
+@*<a href="/Home/Index?filter=queso">Queso</a>*@
+
+@*<form method="post">
+    <input name="filter" type="search" class="form-control"/>
+    </form>*@
+
+@{
+    //var products = Model;
+    //var products = (IEnumerable<Product>)ViewData["products"];
+    var products = (IEnumerable<Product>)ViewBag.products;
+
+    if (products != null && products.Any())
+    {
+        <table class="table">
+            @foreach (var p in products)
+            {
+                <tr><td>@p.ProductName</td></tr>
+            }
+        </table>
+    }
 }
