--- a/20211005/WA50/WA50/Views/Home/Index.cshtml
+++ b/20211005/WA50/WA50/Views/Home/Index.cshtml
@@ -6,6 +6,12 @@
 
 <h1>Index</h1>
 
+<form asp-action="Index">
+    <input asp-for="Filter" placeholder="Type here ..." />    
+@*    <input name="filter" type="text" value="@Model.Filter" 
+placeholder="Type here ..." /> *@
+</form>
+
 @{
     var ps = Model.Products;
 }
