--- a/20211012/WA4/WA4/Views/Home/Index.cshtml
+++ b/20211012/WA4/WA4/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
     // Templated Razor Delegates
     // https://docs.microsoft.com/en-us/aspnet/core/mvc/views/razor?view=aspnetcore-3.1#templated-razor-delegates
     Func<dynamic, object> productTemplate = @<tr>
-        <td>@item.ProductName</td>
+                    <td><strong>@item.ProductName</strong></td>
         <td>@item.QuantityPerUnit</td>
         <td>@item.UnitPrice</td>
         <td>@item.UnitsInStock</td>
@@ -71,7 +71,7 @@
         <tr>
             <td>@p.ProductName</td>
             <td>@p.QuantityPerUnit</td>
-            <td>@p.UnitPrice</td>
+            <td><strong>@p.UnitPrice</strong></td>
             <td>@p.UnitsInStock</td>
             <td>
                 <a asp-controller="Product" asp-action="Detail"
@@ -121,11 +121,11 @@
                             @foreach (var p in c.Items)
                             {
                                 <tr>
-                                    <td>@p.ProductName</td>
-                                    <td>@p.QuantityPerUnit</td>
-                                    <td>@p.UnitPrice</td>
-                                    <td>@p.UnitsInStock</td>
-                                </tr>
+                <td>@p.ProductName</td>
+                <td>@p.QuantityPerUnit</td>
+                <td>@p.UnitPrice</td>
+                <td>@p.UnitsInStock</td>
+            </tr>
 
                                 //Html Helpers
                                 @*@ProductHelper.ProductDetail(p)*@
@@ -146,11 +146,14 @@
                                 @*@await Html.PartialAsync("ProductPartial", p)*@
 
                                 // Templated Razor Delegates
-                                @productTemplate(p)
-                                await productTemplate2(p);
-                                @*@productLine(p,
-                                    @<tr><td>@p.ProductName</td>
+                                @*@productTemplate(p)*@
+                                //await productTemplate2(p);
+                                @*@productLine(p, @<tr><td>@p.ProductName</td>
                                     <td>@p.QuantityPerUnit</td><td>@p.UnitPrice</td></tr>);*@
+
+                                @*@productLine(p,
+                                    @<tr><th>@p.ProductName</th>
+                                    <td>@p.QuantityPerUnit</td><td><strong>@p.UnitPrice</strong></td></tr>);*@
 
                                 @*<component type="typeof(WA4.UI.Basic.ProductDetail)" render-mode="ServerPrerendered" />*@
                             }
