--- a/20211012/WA50/WA50/Views/Home/Index.cshtml
+++ b/20211012/WA50/WA50/Views/Home/Index.cshtml
@@ -1,20 +1,49 @@
-﻿@model HomeIndexViewModel
+﻿@using X.PagedList.Mvc.Core;
+@using X.PagedList;
+@using X.PagedList.Web.Common
+@model HomeIndexViewModel
 
 @{
     ViewData["Title"] = "Index";
 }
 
+<link href="/css/PagedList.css" rel="stylesheet" type="text/css" />
+
 <h1>Index</h1>
 
 <form asp-action="Index">
-    <input asp-for="Filter" placeholder="Type here ..." />    
-@*    <input name="filter" type="text" value="@Model.Filter" 
-placeholder="Type here ..." /> *@
+    <input asp-for="Filter" placeholder="Type here ..." />
+    @*    <input name="filter" type="text" value="@Model.Filter"
+        placeholder="Type here ..." /> *@
 </form>
 
 @{
     var ps = Model.Products;
 }
+<br />
+@*<ul class="pagination">
+        <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+    </ul>*@
+
+@Html.PagedListPager(ps, page => Url.Action("Index", new { page }), new PagedListRenderOptions
+{
+    PageClasses = new string[] { "page-link" },
+    UlElementClasses = new string[] { "pagination" },
+    LiElementClasses = new string[] { "page-item" },
+    DisplayItemSliceAndTotal = true
+})
 
 <table class="table">
     <thead>
