--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Details.cshtml
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Details.cshtml
@@ -15,6 +15,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CategoryName)
+            @*@Model.CategoryName*@
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
