--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Delete.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Delete.cshtml
@@ -26,8 +26,9 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Picture)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Picture)
+        <dd class="col-sm-10">
+            @*@Html.DisplayFor(model => model.Picture)*@
+            <img src="data:image;base64,@System.Convert.ToBase64String(Model.Picture)" width="80" height="80" />
         </dd>
     </dl>
     
