--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Index.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Index.cshtml
@@ -36,7 +36,7 @@
             <td>
                 @*@Html.DisplayFor(modelItem => item.Picture)*@
                 <img src="@Url.Action("ReadImage", new { id = item.CategoryId })"
-                     alt="Imagen de @item.CategoryName" />
+                     alt="Imagen de @item.CategoryName"  width="50" height="50"/>
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
