--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Views/Shared/_Layout.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <title>@ViewData["Title"] - Northwind.Store.UI.Web.Intranet</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/PagedList.css" />
 </head>
 <body>
     <header>
