--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Edit.cshtml
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Edit.cshtml
@@ -28,6 +28,7 @@
                 <input asp-for="Picture" class="form-control" />
                 <span asp-validation-for="Picture" class="text-danger"></span>
             </div>
+            <input type="hidden" asp-for="RowVersion" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
