--- a/20211109/WA70/WA70/Views/Cart/Index.cshtml
+++ b/20211109/WA70/WA70/Views/Cart/Index.cshtml
@@ -1,5 +1,40 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using Northwind.Store.Model
+@model WA70.ViewModels.CartViewModel
+
+
 @{
+    var pa = (Product)ViewBag.productAdded;
+    var paName = TempData["ProductName"];
+}
+@if (pa != null)
+{
+    <div class="alert alert-info" role="alert">
+        Nuevo producto: @pa.ProductName!
+    </div>
+}
+
+@if (Model != null && Model.Items.Any())
+{
+    <table class="table">
+        <thead>
+            <tr><th>Product</th><th>Price</th></tr>
+        </thead>
+        <tbody>
+            @foreach (var p in Model.Items)
+            {
+                <tr>
+                    <td>@p.ProductName</td>
+                    <td>@p.UnitPrice?.ToString("n")</td>
+                </tr>
+            }
+        </tbody>
+        <tfoot>
+            <tr><th>Items Count</th><td>@Model.Count</td></tr>
+            <tr><th>Items Total</th><td>@Model.Total.ToString("n")</td></tr>
+        </tfoot>
+    </table>
+}
+else
+{
+    <h3>Your cart is empty! 😮</h3>
 }
