--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Product/Index.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Product/Index.cshtml
@@ -1,10 +1,12 @@
-﻿@model IEnumerable<Northwind.Store.Model.Product>
+﻿@using X.PagedList
+@using X.PagedList.Mvc.Core
+@model IEnumerable<Northwind.Store.Model.Product>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Products</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -39,11 +41,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.Supplier)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Picture)
+    P        </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductName)
@@ -73,11 +79,16 @@
                 @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
             </td>
             <td>
+                <img src="@Url.Action("ReadImage", new { id = item.ProductId })"
+                     alt="Imagen de @item.Picture" width="50" height="50" />
+            </td>
+            <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
             </td>
         </tr>
-}
+        }
     </tbody>
 </table>
+@Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }))
