--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Region/Index.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Region/Index.cshtml
@@ -1,10 +1,12 @@
-﻿@model IEnumerable<Northwind.Store.Model.Region>
+﻿@using X.PagedList
+@using X.PagedList.Mvc.Core
+@model IEnumerable<Northwind.Store.Model.Region>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Regions</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -19,17 +21,19 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.RegionDescription)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.RegionId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RegionId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RegionId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RegionDescription)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.RegionId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.RegionId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.RegionId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+@Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }))
