--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Views/Shared/_Layout.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                             Admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="nav-link text-dark" asp-area="admin" asp-controller="Home" asp-action="Index">Home</a>
                             <a class="nav-link text-dark" asp-area="admin" asp-controller="Category" asp-action="Index">Categories</a>
                             <a class="nav-link text-dark" asp-area="admin" asp-controller="Customer" asp-action="Index">Customers</a>
                             <a class="nav-link text-dark" asp-area="admin" asp-controller="Employee" asp-action="Index">Employees</a>
