--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.PWA/Client/Pages/Product.razor
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.PWA/Client/Pages/Product.razor
@@ -38,11 +38,12 @@
                 <tbody>
                     @foreach (var p in products)
                     {
-                        <tr>
-                            <td>@p.ProductName</td>
-                            <td>@p.UnitPrice</td>
-                            <td><button @onclick="@(() => { product = p; _state = State.Edit; })">Select</button></td>
-                        </tr>
+                    <tr>
+                        <td>@p.ProductName</td>
+                        <td>@p.UnitPrice</td>
+                        <td><button @onclick="@(() => { product = p; _state = State.Edit; })">Select</button></td>
+                        <td><button @onclick="@(async () => { if (await Confirm()) { await onDelete(p.ProductId); } })">X</button></td>
+                    </tr>
                     }
                 </tbody>
             </table>
@@ -73,7 +74,7 @@
 }
 
 @code {
-    private string baseURL = "https://localhost:44327/api/Product/";
+    private string baseURL = "https://localhost:44332/api/Product/";
     string filter = "";
 
     State _state = State.None;
@@ -132,12 +133,21 @@
         products = await Http.GetFromJsonAsync<List<Model.Product>>($"{baseURL}Search/{filter}");
     }
 
+    public async Task onDelete(int id)
+    {
+        await Http.DeleteAsync($"{baseURL}{id}");
+
+        products.Remove(products.Single(p => p.ProductId == id));
+
+        await Alert("Ready!");
+    }
+
     async Task Alert(string message)
     {
         await JsRuntime.InvokeVoidAsync("alert", message);
     }
 
-    async Task<bool> Confirm(string message)
+    async Task<bool> Confirm()
     {
         return await JsRuntime.InvokeAsync<bool>("confirm", "¿Confirme que desea proceder con la acción?");
     }
