--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Product/Create.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Product/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
@@ -30,15 +30,18 @@
                 <input asp-for="QuantityPerUnit" class="form-control" />
                 <span asp-validation-for="QuantityPerUnit" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Discontinued" /> @Html.DisplayNameFor(model => model.Discontinued)
-                </label>
+            <div class="form-group">
+                <label asp-for="UnitPrice" class="control-label"></label>
+                <input asp-for="UnitPrice" class="form-control" />
+                <span asp-validation-for="UnitPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Picture" class="control-label"></label>
-                <input asp-for="Picture" type="file" accept=".jpg,.png" />
-                <span asp-validation-for="Picture" class="text-danger"></span>
+                <div class="custom-file">
+                    <input asp-for="Picture" type="file" class="custom-file-input" accept=".jpg,.png">
+                    <label class="custom-file-label" asp-for="Picture">Choose file</label>
+                    <span asp-validation-for="Picture" class="text-danger"></span>
+                </div>
+                <img id="picture_preview" src="" width="100px" height="100px"/>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -54,3 +57,26 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript">
+    $(function () {
+        var file = $("input[type=file]").get(0).files[0];
+
+        if (file == undefined)
+            $("#picture_preview").hide();
+
+        $('#Picture').change(function() {
+            var file = $("input[type=file]").get(0).files[0];
+
+            if (file) {
+                var reader = new FileReader();
+
+                reader.onload = function () {
+                    $("#picture_preview").show();
+                    $("#picture_preview").attr("src", reader.result);
+                }
+                reader.readAsDataURL(file);
+            }
+        });
+    });
+</script>
