--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Product/Details.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Product/Details.cshtml
@@ -64,6 +64,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Supplier.CompanyName)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Picture)
+        </dt>
+        <dd class = "col-sm-10">
+            <img src="@Url.Action("ReadImage", new { id = Model.ProductId })"
+                 alt="Imagen de @Model.Picture" width="200" height="200" />
+        </dd>
     </dl>
 </div>
 <div>
