--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Delete.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Delete.cshtml
@@ -28,7 +28,8 @@
         </dt>
         <dd class="col-sm-10">
             @*@Html.DisplayFor(model => model.Picture)*@
-            <img src="data:image;base64,@System.Convert.ToBase64String(Model.Picture)" width="80" height="80" />
+            <img src="@Url.Action("ReadImage", new { id = Model.CategoryId })"
+                 alt="Imagen de @Model.CategoryName"  width="50" height="50"/>
         </dd>
     </dl>
     
