--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Views/Shared/_Layout.cshtml
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @if (SignInManager.IsSignedIn(User))
+                        @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
