label from cache

--- a/NorthwindStore/Northwind.Store.UI.Web.Internet/Views/Shared/_HomePartial.cshtml
+++ b/NorthwindStore/Northwind.Store.UI.Web.Internet/Views/Shared/_HomePartial.cshtml
@@ -34,3 +34,5 @@
         LiElementClasses = new string[] { "page-item" },
         PageClasses = new string[] { "page-link" }
     })
+    
+    <strong>@ViewData["cached"]</strong>
